responsive @sharebutton compo and added onerror image in home.jsx and moviedetails.jsx little bit changed scrollbar colors and @correction in footer copyright inforamtion name replaced  with new domain name

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@
 /* Scrollbar */
 ::-webkit-scrollbar {
     width: 10px;
-    background-color: transparent;
+    background-color: #00012923;
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: rgba(69, 74, 84, 0.5);
+    background-color: #20232a78;
   }
   
   /* Focus styles */
