--- a/src/components/MovieDetail.css
+++ b/src/components/MovieDetail.css
@@ -26,13 +26,14 @@
   
   .movie-detail-container {
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
     /* border-radius: 8px; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     /* max-width: 600px; */
     width: calc(100vw - 20vw);
     display: flex;
     flex-direction: column;
+    margin-top: 5px;
   }
   
   .movie-detail-image {
